plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'org.beryx.jlink' version '2.16.4'
}

group 'com.linziniu'
version '1.0-SNAPSHOT'

repositories {
//    mavenCentral()
    maven { url 'https://maven.aliyun.com/repository/central' }
}

sourceCompatibility = 1.15
compileJava.options.encoding = 'UTF-8'

javafx {
    version = "15.0.1"
    modules = ['javafx.controls', 'javafx.fxml']
}

jlink {
    launcher {
        name = 'MainApp'
    }
}

mainClassName = 'com.linziniu.MainApp'

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile project(":Socket")
    compile 'com.jfoenix:jfoenix:9.0.10'
    implementation 'org.apache.commons:commons-lang3:3.11'
}

run {
   jvmArgs = [
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
        "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
           "--add-opens=java.base/java.lang.reflect=com.jfoenix"
    ]
}

